# short-challenge

./: CMakeLists.txt
dispatcher/: dispatcher.cpp
thread-synchronization/: LockGuard.h  main.cpp
